Fjerner kode for å utføre søk på navn og fødselsnummer.